
include_directories(
	${OPENGL_INCLUDE_PATH}
	${GLUT_INCLUDE_DIR}
	${piglit_SOURCE_DIR}/tests/mesa/util
	${piglit_SOURCE_DIR}/tests/util
	${GLEW_INCLUDE_DIR}
)

link_directories (
	${piglit_SOURCE_DIR}/tests/mesa/util
	${piglit_SOURCE_DIR}/tests/util
)

link_libraries (
	piglitutil
	${OPENGL_gl_LIBRARY}
	${OPENGL_glu_LIBRARY}
	${GLUT_glut_LIBRARY}
	${TIFF_LIBRARY}
	${GLEW_glew_LIBRARY}
)

add_executable (activeprogram-bad-program activeprogram-bad-program.c)
add_executable (activeprogram-get activeprogram-get.c)
add_executable (ati-fs-bad-delete ati-fs-bad-delete.c)
add_executable (createshaderprogram-bad-type createshaderprogram-bad-type.c)
add_executable (createshaderprogram-attached-shaders createshaderprogram-attached-shaders.c)
add_executable (trinity-fp1 trinity-fp1.c)
add_executable (fp-abs-01 fp-abs-01.c)
add_executable (fp-abs-02 fp-abs-02.c)
add_executable (fp-condition_codes-01 fp-condition_codes-01.c)
add_executable (fp-lit-mask fp-lit-mask.c)
add_executable (fp-fog fp-fog.c)
add_executable (fp-formats fp-formats.c)
add_executable (fp-fragment-position fp-fragment-position.c)
add_executable (fp-generic fp-generic.c)
add_executable (fp-kil fp-kil.c)
add_executable (fp-incomplete-tex fp-incomplete-tex.c)
add_executable (fp-indirections fp-indirections.c)
add_executable (fp-indirections2 fp-indirections2.c)
add_executable (fp-long-alu fp-long-alu.c)
add_executable (fp-rfl fp-rfl.c)
IF (UNIX)
	target_link_libraries(fp-rfl m)
ENDIF (UNIX)
add_executable (fp-set-01 fp-set-01.c)
add_executable (fp-set-02 fp-set-02.c)
add_executable (fp-unpack-01 fp-unpack-01.c)
IF (UNIX)
	target_link_libraries(fp-unpack-01 m)
ENDIF (UNIX)
add_executable (glsl-arb-fragment-coord-conventions glsl-arb-fragment-coord-conventions.c)
add_executable (glsl-arb-fragment-coord-conventions-define glsl-arb-fragment-coord-conventions-define.c)
add_executable (glsl-bindattriblocation glsl-bindattriblocation.c)
add_executable (glsl-bug-22603 glsl-bug-22603.c)
add_executable (glsl-dlist-getattriblocation glsl-dlist-getattriblocation.c)
add_executable (glsl-explicit-location-01 glsl-explicit-location-01.c)
add_executable (glsl-explicit-location-02 glsl-explicit-location-02.c)
add_executable (glsl-explicit-location-03 glsl-explicit-location-03.c)
add_executable (glsl-explicit-location-04 glsl-explicit-location-04.c)
add_executable (glsl-explicit-location-05 glsl-explicit-location-05.c)
add_executable (glsl-getattriblocation glsl-getattriblocation.c)
add_executable (glsl-getactiveuniform-array-size glsl-getactiveuniform-array-size.c)
add_executable (glsl-getactiveuniform-count glsl-getactiveuniform-count.c)
add_executable (glsl-getactiveuniform-length glsl-getactiveuniform-length.c)
add_executable (getuniform-01 getuniform-01.c)
add_executable (glsl-invalid-asm-01 glsl-invalid-asm-01.c)
add_executable (glsl-invalid-asm-02 glsl-invalid-asm-02.c)
add_executable (glsl-novertexdata glsl-novertexdata.c)
add_executable (glsl-orangebook-ch06-bump glsl-orangebook-ch06-bump.c)
add_executable (glsl-reload-source glsl-reload-source.c)
add_executable (glsl-unused-varying glsl-unused-varying.c)
add_executable (glsl-uniform-update glsl-uniform-update.c)
add_executable (glsl-uniform-out-of-bounds glsl-uniform-out-of-bounds.c)
add_executable (glsl-fs-bug25902 glsl-fs-bug25902.c)
add_executable (glsl-fs-exp2 glsl-fs-exp2.c)
add_executable (glsl-fs-fragcoord glsl-fs-fragcoord.c)
add_executable (glsl-fs-loop glsl-fs-loop.c)
add_executable (glsl-fs-loop-nested glsl-fs-loop-nested.c)
add_executable (glsl-fs-mix glsl-fs-mix.c)
add_executable (glsl-fs-mix-constant glsl-fs-mix-constant.c)
IF (NOT MSVC)
	add_executable (glsl-fs-raytrace-bug27060 glsl-fs-raytrace-bug27060.c)
ENDIF (NOT MSVC)
add_executable (glsl-fs-sampler-numbering glsl-fs-sampler-numbering.c)
add_executable (glsl-fs-shader-stencil-export glsl-fs-shader-stencil-export.c)
add_executable (glsl-fs-sqrt-branch glsl-fs-sqrt-branch.c)
add_executable (glsl-fs-sqrt-zero glsl-fs-sqrt-zero.c)
add_executable (glsl-fs-texturecube glsl-fs-texturecube.c)
add_executable (glsl-fs-texturecube-2 glsl-fs-texturecube-2.c)
add_executable (glsl-fs-texture2drect glsl-fs-texture2drect.c)
add_executable (glsl-fs-texturelod-01 glsl-fs-texturelod-01.c)
add_executable (glsl-fs-user-varying-ff glsl-fs-user-varying-ff.c)
add_executable (glsl-vs-arrays glsl-vs-arrays.c)
add_executable (glsl-vs-mov-after-deref glsl-vs-mov-after-deref.c)
add_executable (glsl-vs-normalscale glsl-vs-normalscale.c)
add_executable (glsl-vs-functions glsl-vs-functions.c)
add_executable (glsl-vs-texturematrix-1 glsl-vs-texturematrix-1.c)
add_executable (glsl-vs-texturematrix-2 glsl-vs-texturematrix-2.c)
add_executable (glsl-fs-pointcoord glsl-fs-pointcoord.c)
add_executable (glsl-vs-if-bool glsl-vs-if-bool.c)
add_executable (glsl-vs-loop glsl-vs-loop.c)
add_executable (glsl-vs-loop-nested glsl-vs-loop-nested.c)
IF (NOT MSVC)
	add_executable (glsl-vs-raytrace-bug26691 glsl-vs-raytrace-bug26691.c)
ENDIF (NOT MSVC)
add_executable (glsl-vs-sqrt-zero glsl-vs-sqrt-zero.c)
add_executable (glsl-vs-user-varying-ff glsl-vs-user-varying-ff.c)
add_executable (glsl-light-model glsl-light-model.c)
add_executable (glsl-link-bug30552 glsl-link-bug30552.c)
add_executable (glsl-link-empty-prog-01 glsl-link-empty-prog-01.c)
add_executable (glsl-link-empty-prog-02 glsl-link-empty-prog-02.c)
add_executable (glsl-link-initializer-01 glsl-link-initializer-01.c)
add_executable (glsl-link-initializer-02 glsl-link-initializer-02.c)
add_executable (glsl-link-initializer-03 glsl-link-initializer-03.c)
add_executable (glsl-link-initializer-04 glsl-link-initializer-04.c)
add_executable (glsl-link-initializer-05 glsl-link-initializer-05.c)
add_executable (glsl-link-initializer-06 glsl-link-initializer-06.c)
add_executable (glsl-link-invariant-01 glsl-link-invariant-01.c)
add_executable (glsl-link-centroid-01 glsl-link-centroid-01.c)
add_executable (glsl-link-struct-array glsl-link-struct-array.c)
add_executable (gpu_shader4_attribs gpu_shader4_attribs.c)
add_executable (vp-address-01 vp-address-01.c)
add_executable (vp-address-02 vp-address-02.c)
add_executable (vp-address-03 vp-address-03.c)
add_executable (vp-address-04 vp-address-04.c)
add_executable (vp-address-05 vp-address-05.c)
add_executable (vp-address-06 vp-address-06.c)
add_executable (vp-bad-program vp-bad-program.c)
add_executable (vp-combined-image-units vp-combined-image-units.c)
add_executable (vp-clipdistance-01 vp-clipdistance-01.c)
add_executable (vp-clipdistance-02 vp-clipdistance-02.c)
add_executable (vp-clipdistance-03 vp-clipdistance-03.c)
add_executable (vp-clipdistance-04 vp-clipdistance-04.c)
add_executable (vpfp-generic vpfp-generic.cpp)
add_executable (vp-max-array vp-max-array.c)
add_executable (glsl-derivs glsl-derivs.c)
add_executable (glsl-deriv-varyings glsl-deriv-varyings.c)
add_executable (glsl-fs-discard-02 glsl-fs-discard-02.c)
add_executable (glsl-fwidth glsl-fwidth.c)
add_executable (glsl-lod-bias glsl-lod-bias.c)
add_executable (glsl-preprocessor-comments glsl-preprocessor-comments.c)
add_executable (vp-ignore-input vp-ignore-input.c)
add_executable (glsl-empty-vs-no-fs glsl-empty-vs-no-fs.c)
add_executable (glsl-mat-attribute glsl-mat-attribute.c)
add_executable (glsl-max-varyings glsl-max-varyings.c)
add_executable (glsl-useprogram-displaylist glsl-useprogram-displaylist.c)
add_executable (glsl-routing glsl-routing.c)
add_executable (shader_runner shader_runner.c)
add_executable (glsl-vs-point-size glsl-vs-point-size.c)
add_executable (glsl-sin glsl-sin.c)
IF (UNIX)
	target_link_libraries(glsl-sin m)
ENDIF (UNIX)
add_executable (glsl-cos glsl-cos.c)
IF (UNIX)
	target_link_libraries(glsl-cos m)
ENDIF (UNIX)
add_executable (glsl-kwin-blur-1 glsl-kwin-blur-1.c)
add_executable (glsl-kwin-blur glsl-kwin-blur.c)
add_executable (link-mismatch-layout-01 link-mismatch-layout-01.c)
add_executable (link-mismatch-layout-02 link-mismatch-layout-02.c)
add_executable (link-mismatch-layout-03 link-mismatch-layout-03.c)
add_executable (link-unresolved-function link-unresolved-function.c)
add_executable (sso-simple sso-simple.c)
add_executable (sso-uniforms-01 sso-uniforms-01.c)
add_executable (sso-uniforms-02 sso-uniforms-02.c)
add_executable (sso-user-varying-01 sso-user-varying-01.c)
add_executable (sso-user-varying-02 sso-user-varying-02.c)
add_executable (useprogram-flushverts-1 useprogram-flushverts-1.c)
add_executable (useprogram-flushverts-2 useprogram-flushverts-2.c)
add_executable (useprogram-inside-begin useprogram-inside-begin.c)
add_executable (useprogram-refcount-1 useprogram-refcount-1.c)
add_executable (useshaderprogram-bad-type useshaderprogram-bad-type.c)
add_executable (useshaderprogram-bad-program useshaderprogram-bad-program.c)
add_executable (useshaderprogram-flushverts-1 useshaderprogram-flushverts-1.c)
