add_subdirectory (arb_color_buffer_float)
add_subdirectory (arb_es2_compatibility)
add_subdirectory (arb_instanced_arrays)
add_subdirectory (arb_robustness)
add_subdirectory (arb_sampler_objects)
add_subdirectory (arb_seamless_cube_map)
add_subdirectory (amd_seamless_cubemap_per_texture)
add_subdirectory (arb_shader_texture_lod/execution)
add_subdirectory (ati_draw_buffers)
add_subdirectory (arb_texture_compression)
add_subdirectory (arb_texture_float)
add_subdirectory (ati_envmap_bumpmap)
add_subdirectory (ext_fog_coord)
add_subdirectory (ext_packed_depth_stencil)
add_subdirectory (ext_transform_feedback)
add_subdirectory (nv_conditional_render)
add_subdirectory (nv_texture_barrier)
add_subdirectory (arb_draw_elements_base_vertex)
add_subdirectory (arb_vertex_buffer_object)
add_subdirectory (arb_vertex_program)
add_subdirectory (arb_copy_buffer)
add_subdirectory (glsl-1.20)
add_subdirectory (glsl-1.30)
add_subdirectory (arb_vertex_type_2_10_10_10_rev)
